changes to routing

--- a/src/app/_app-variables.scss
+++ b/src/app/_app-variables.scss
@@ -5,6 +5,8 @@ $sidebar-background-color: #ff000080;
 $text-color: #484848;
 
 // Sizes
+$header-height: 60px;
+$footer-height: 44px;
 
 // Buttons
 
