--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -12,6 +12,7 @@
     font-size: 14px;
     font-weight: 300;
     padding: 10px 16px;
+    height: $footer-height;
 
     .external-link {
         color: #0a58ca;
