--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,51 +1,14 @@
-@import './../shared';
-@import './../app-variables';
+.hero-section {
+    height: 100vh;
+    width: 100%;
+    background-image: url("./../../assets/images/hero1.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 
-.example-container {
-    position: absolute;
-    top: 60px;
-    bottom: 0px;
-    left: 0;
-    right: 0;
-}
-
-.example-sidenav {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 200px;
-    background: $sidebar-background-color;
-}
-
-.sidemenu {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-
-    .menu-item {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin: 10px 16px;
-
-        a {
-            display: block;
-            text-transform: uppercase;
-            text-decoration: none;
-            cursor: pointer;
-            color: $text-color;
-        }
-
-        .active {
-            font-weight: 900;
-        }
-    }
-}
-
-.main-content {
-    height: calc(100% - 60px);
-
-    .card {
+    .overlay {
+        width: 100%;
         height: 100%;
+        background-color: #0000008c;
     }
 }
