--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,3 +11,5 @@
         <button mat-stroked-button color="accent" class="btn-block" (click)="login()">Login</button>
     </mat-card-content>
 </form>
+
+<app-footer></app-footer>
