--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,8 @@
 <div class="footer">
-    <div>&copy; {{currYear}} All Rights Reserved&nbsp;<a class="external-link" href="https://github.com/adammo14" target="_blank">Me</a></div>
-    <div><a class="external-link" [routerLink]="'cookie-policy'">Cookie Policy</a>&nbsp;|&nbsp;<a class="external-link" [routerLink]="'privacy-policy'">Privacy Policy</a></div>
-    <div class="poweredby">Powered by <mat-icon>emoji_food_beverage</mat-icon></div>
-</div> 
+    <div>&copy; {{currYear}} All Rights Reserved&nbsp;<a class="external-link" href="https://github.com/adammo14"
+            target="_blank">Me</a></div>
+    <div><a class="external-link" [routerLink]="'cookie-policy'">Cookie Policy</a>&nbsp;|&nbsp;<a class="external-link"
+            [routerLink]="'privacy-policy'">Privacy Policy</a></div>
+    <div class="poweredby">Powered by <mat-icon>emoji_food_beverage</mat-icon>
+    </div>
+</div>
