--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,10 +1,10 @@
-@import '../../app-variables';
+@import "../../app-variables";
 
 .footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: absolute;
+    position: relative;
     bottom: 0;
     left: 0;
     right: 0;
