--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,14 +1,23 @@
 <mat-toolbar class="top-nav" color="primary">
-    <a *ngIf="isLoggedIn" mat-icon-button class="icon me-3" aria-label="Example icon-button with menu icon" (click)="toggleDrawer()">
-        <mat-icon *ngIf="!sideMenuIcon">menu</mat-icon>
-        <mat-icon *ngIf="sideMenuIcon">close</mat-icon>
-    </a>
-    <span>My App</span>
+    <button *ngIf="!isLoggedIn" mat-button [routerLink]="'/'">
+        <span>My App</span>
+    </button>
     <span class="example-spacer"></span>
-    <a *ngIf="isLoggedIn" mat-icon-button class="icon me-3" aria-label="Example icon-button with heart icon">
-        <mat-icon>favorite</mat-icon>
-    </a>
-    <a *ngIf="isLoggedIn" mat-icon-button class="icon" aria-label="Example icon-button with share icon">
-        <mat-icon>share</mat-icon>
-    </a>
+    <button *ngIf="!isLoggedIn" mat-button [routerLink]="'/'">Home</button>
+    <button *ngIf="!isLoggedIn" mat-button [routerLink]="'/achievements'">Achievements</button>
+    <button *ngIf="!isLoggedIn" mat-button [routerLink]="'/team'">Team</button>
+    <button *ngIf="!isLoggedIn" mat-button [routerLink]="'/about'">About</button>
+    <button *ngIf="!isLoggedIn" mat-button [routerLink]="'/contact'">Contact</button>
+    <span *ngIf="!isLoggedIn" class="me-2">|</span>
+    <button *ngIf="!isLoggedIn" mat-raised-button color="primary" [routerLink]="'/login'">Login</button>
+
+    <!-- User profile dropdown -->
+    <button *ngIf="isLoggedIn" mat-button [matMenuTriggerFor]="beforeMenu">
+        <img class="profile-img" src="./../../../assets/images/404kat.jpg">
+        Test User
+    </button>
+    <mat-menu #beforeMenu="matMenu" xPosition="before">
+        <button mat-menu-item>Item 1</button>
+        <button mat-menu-item>Item 2</button>
+    </mat-menu>
 </mat-toolbar>
